<resources>
    <string name="app_name">Cafe Coffee Day</string>
    <string name="cafe_coffee_day">Cafè Coffee Day</string>
    <string name="todo">TODO</string>
    <string name="slogan">A lot can happen over coffee</string>
    <string name="location">📍 Deendayal Mall, Gwalior
    </string>
    <string name="phone">📞 +91 9300070956</string>
    <string name="email">📧  eshop@cafecoffeeday.com</string>
    <string name="website">🌐 www.cafecoffeeday.com</string>
    <string name="discription">Café Coffee Day (CCD) is an Indian café chain. It is a subsidiary of Coffee Day Enterprises Limited. Coffee Day serves 1.6 billion cups of coffee annually in six countries. Internationally, CCDs are present in Austria, Czech Republic, Malaysia, Nepal and Egypt.</string>
</resources>