<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/iconsize"
            android:background="#3E3632"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            android:src="@drawable/ccd" />

        <TextView
            android:id="@+id/nameheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:layout_marginTop="-440dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/cafe_coffee_day"
            android:textColor="#7E7D7D"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameheading"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/slogan"
            android:textColor="#959595"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/slogan"
            android:autoLink="all"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/location"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:autoLink="phone"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:autoLink="email"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:autoLink="web"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/website"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/website"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:text="@string/discription"
            android:textAppearance="?android:textAppearanceMedium" />


    </RelativeLayout>
</ScrollView>